@@ -1,9 +1,7 @@
 package com.bank.publicinfo.util;
 
-import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
-import org.mockito.Mockito;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.SpringBootTest;
 
@@ -12,14 +10,14 @@ import javax.persistence.EntityNotFoundException;
 import java.util.Collections;
 import java.util.List;
 
-import static org.assertj.core.api.Assertions.*;
-import static org.junit.jupiter.api.Assertions.*;
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.junit.jupiter.api.Assertions.assertThrows;
 
 @SpringBootTest
 class EntityNotFoundSupplierTest {
-    private EntityNotFoundSupplier supplier;
+    private final EntityNotFoundSupplier supplier;
 
-   @Autowired
+    @Autowired
     public EntityNotFoundSupplierTest(EntityNotFoundSupplier supplier) {
         this.supplier = supplier;
     }
@@ -35,7 +33,7 @@ class EntityNotFoundSupplierTest {
     @Test
     @DisplayName("Выброс EntityNotFoundException при сравнении листов id и entities")
     void checkForSizeAndLoggingTest() {
-       assertThrows(EntityNotFoundException.class, () -> supplier.checkForSizeAndLogging("Test", List.of(1L,2L,3L),
-               Collections.emptyList()));
-   }
+        assertThrows(EntityNotFoundException.class,
+                () -> supplier.checkForSizeAndLogging("Test", List.of(1L,2L,3L), Collections.emptyList()));
+    }
 }
